Remove pre-commit dependency from build job in CI/CD pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
 
   build:
     name: "Build Package"
-    needs: [test, test-debian, pre-commit]
+    needs: [test, test-debian]
     runs-on: ubuntu-latest
     
     steps:
